--- a/themes/bluelagoon/style.css
+++ b/themes/bluelagoon/style.css
@@ -1900,7 +1900,7 @@ textarea {
     border-left:1px solid #eaeaea;
     border-top:1px solid #eaeaea;
     border-right:1px solid #939271;
-    border-left:1px solid #939271;;
+    border-left:1px solid #939271;
 }
 
 .mailClientCSSButton {
@@ -2391,7 +2391,7 @@ vtigerHelpWelcomePopupLay #contentOfHelp{
     bottom: 0;
     background: url(images/help_header.png) repeat-x;
 	border-top:2px solid #717351;
-	heigth:30px;
+	height:30px;
 }
 div#vtigerHelpPopupLay{
     position : relative !important;
@@ -2465,7 +2465,7 @@ input {
     font-weight: bold;
 }
 .mm_message p {
-    border: 2px solid #4F94CD;;
+    border: 2px solid #4F94CD;
     padding: 2px;
     position: fixed;
     left: 50%;
@@ -2652,7 +2652,7 @@ a.allMnu:Hover{
 }
 .searchBtn{
 	width:48px;
-	height:31px;
+	height:24px;
 }
 
 .selectall{
