new graphic and logo

--- a/include/style.css
+++ b/include/style.css
@@ -8,43 +8,49 @@
 ********************************************************************************/
 
 body {
-	font-family: Arial, Helvetica, san-serif;
+	font-family: Helvetica, Arial, san-serif;
 	margin: 0;
+        margin-top: 40px;
 }
 
 a {
 	text-decoration: none;
-	color: #000000;
+	color: #717171;
 }
 
 a:hover {
 	text-decoration: underline;
-	color: #0000FF;
+	color: #424242;
 }
 
 .loginContainer {
     width: 100%;
 	height: 100%;
+        margin: 0px auto;
+	width: 100%;
+
+
 }
 
-.loginWrapper {
-	padding: 10px;
-	background: rgb(255,255,255); /* Old browsers */
-	background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(123,165,216,1) 50%, rgba(123,165,216,1) 50%, rgba(255,255,255,1) 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,1)), color-stop(50%,rgba(123,165,216,1)), color-stop(50%,rgba(255,255,255,1)rgba(123,165,216,1)), color-stop(100%,rgba(255,255,255,1))); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(123,165,216,1) 50%,rgba(123,165,216,1) 50%,rgba(255,255,255,1) 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(123,165,216,1) 50%,rgba(123,165,216,1) 50%,rgba(255,255,255,1) 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(123,165,216,1) 50%,rgba(123,165,216,1) 50%,rgba(255,255,255,1) 100%); /* IE10+ */
-	background: linear-gradient(top, rgba(255,255,255,1) 0%,rgba(123,165,216,1) 50%,rgba(123,165,216,1) 50%,rgba(255,255,255,1) 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#FFFFFF', endColorstr='#7ba5d8',GradientType=0 ); /* IE6-9 */
+#loginWrapper {
+	background-image: url('../themes/login/images/bg.png');
+	background-repeat: no-repeat;
+	width: 849px;
+	height: 416px;
+	margin: 0 auto;
+	/*border: 1px solid black;*/
+	z-index: 1;
 }
 
-.loginForm, .importantLinks {
-	width:400px;
+#loginTop{
+	height: 60px;
+	padding-top: 69px;
+      /*border: 1px solid black;*/
 }
 
-.loginForm {
-	padding: 30px;
+#loginBody{
+	height: 177px;
+	/*border: 1px solid black;*/
 }
 
 .importantLinks {
@@ -54,51 +60,39 @@ a:hover {
 	font-size: 0.8em;
 }
 
-.pluginsPromotionDiv {
-	background-color: #D0DDED;
-	-webkit-box-shadow: 3px 3px 3px 3px rgba(150, 150, 150, 0.5);
-	-moz-box-shadow: 3px 3px 3px 3px rgba(150, 150, 150, 0.5);
-	box-shadow: 3px 3px 3px 3px rgba(150, 150, 150, 0.5);
-	padding-top: 10px;
-	padding-bottom: 10px;
-	padding-left: 50px;
-	padding-right: 50px;
-}
-
 .loginForm {
-	background: rgb(80,133,206); /* Old browsers */
-	background: -moz-linear-gradient(top, rgba(80,133,206,1) 0%, rgba(123,165,216,1) 15%, rgba(255,255,255,1) 50%, rgba(255,255,255,1) 50%, rgba(123,165,216,1) 85%, rgba(80,133,206,1) 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(80,133,206,1)), color-stop(15%,rgba(123,165,216,1)), color-stop(50%,rgba(255,255,255,1)), color-stop(50%,rgba(255,255,255,1)), color-stop(85%,rgba(123,165,216,1)), color-stop(100%,rgba(80,133,206,1))); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top, rgba(80,133,206,1) 0%,rgba(123,165,216,1) 15%,rgba(255,255,255,1) 50%,rgba(255,255,255,1) 50%,rgba(123,165,216,1) 85%,rgba(80,133,206,1) 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top, rgba(80,133,206,1) 0%,rgba(123,165,216,1) 15%,rgba(255,255,255,1) 50%,rgba(255,255,255,1) 50%,rgba(123,165,216,1) 85%,rgba(80,133,206,1) 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top, rgba(80,133,206,1) 0%,rgba(123,165,216,1) 15%,rgba(255,255,255,1) 50%,rgba(255,255,255,1) 50%,rgba(123,165,216,1) 85%,rgba(80,133,206,1) 100%); /* IE10+ */
-	background: linear-gradient(top, rgba(80,133,206,1) 0%,rgba(123,165,216,1) 15%,rgba(255,255,255,1) 50%,rgba(255,255,255,1) 50%,rgba(123,165,216,1) 85%,rgba(80,133,206,1) 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5085ce', endColorstr='#FFFFFF',GradientType=0 ); /* IE6-9 */
-}
-
-.loginForm {
-	-webkit-box-shadow: 3px 3px 3px 3px rgba(150, 150, 150, 0.5);
-	-moz-box-shadow: 3px 3px 3px 3px rgba(150, 150, 150, 0.5);
-	box-shadow: 3px 3px 3px 3px rgba(150, 150, 150, 0.5);
 	text-align: left;
+        width: 552px;
+	height: 127px;
+	background-image: url('../themes/login/images/box_login.png');
+	padding-top:50px;
+	padding-left:30px;
+	position: absolute;
+	z-index: 2;
 }
 
-.loginForm .poweredBy {
-	width: 100%;
-	font-size: 0.8em;
-	text-align: right;
-	padding-bottom: 1.5em;
-	color: #2d3642;
+.loginForm input{
+	width: 225px; 
+	border: 1px solid #fff;
+	background-color: #fff;
+	border-radius: 10px;
+	-moz-border-radius: 10px;
+	-webkit-border-radius: 10px;
 }
 
-.loginForm .label {
-	font-weight: bold;
+.loginForm #submitButton{
+	border:none;
+	border-radius: 0px;
+	-moz-border-radius: 0px;
+	-webkit-border-radius: 0px;
+	background-image: url('../themes/login/images/enter.png');
+	width: 51px;
+	height: 48px;
+	margin-left: 40px;
 }
 
-.loginForm .input input {
-	width: 350px;
-	font-size: large;
-	color: #3D698E;
+.loginForm tr td{
+	height: 40px;
 }
 
 .loginForm .input input:focus {
@@ -107,19 +101,26 @@ a:hover {
 
 .loginForm .button #submitButton {
 	cursor: pointer;
-	background-color: #3D698E;
+/*	background-color: #3D698E;
 	color: #ffffff;
 	text-align: center;
 	font-size: medium;
 	font-weight: bold;
 	border: 2px outset #3D698E;
-	width: 10em;
-}
-
-.importantLinks, .communityLinks {
-	font-size: 0.8em;
+	width: 10em;*/
 }
 
 .errorMessage {
-	color: #FF0000;
+font-size: 11px;
+	color: #323232;
 }
+
+#loginFooter{
+	height: 73px;
+	padding-top: 11px;
+}
+
+#loginFooter img{
+	padding-right: 20px;
+}
+
