--- a/themes/alphagrey/style.css
+++ b/themes/alphagrey/style.css
@@ -2678,3 +2678,36 @@ a.allMnu:Hover{
 	text-align:center;
 	background-color:white;
 }
+
+.cb-alert-warning, .cb-alert-danger, .cb-alert-info, .cb-alert-success {
+	border-style: solid;
+	border-radius: 12px;
+	margin: 6px;
+	padding: 10px;
+	min-height: 30px;
+	font-size: larger;
+}
+
+.cb-alert-warning {
+	background-color: #fcf8e3;
+	border-color: #faebcc;
+	color: #8a6d3b
+}
+
+.cb-alert-danger {
+	background-color: #f2dede;
+	border-color: #ebccd1;
+	color: #a94442
+}
+
+.cb-alert-info {
+	background-color: #d9edf7;
+	border-color: #bce8f1;
+	color: #31708f
+}
+
+.cb-alert-success {
+	background-color: #dff0d8;
+	border-color: #d6e9c6;
+	color: #3c763d
+}
