--- a/themes/alphagrey/style.css
+++ b/themes/alphagrey/style.css
@@ -7,7 +7,6 @@
  * All Rights Reserved.
  ********************************************************************************/
 
-
 /* ALPHA GRAY  - COLOR THEME*/
 /*added to change color of disabled button */
 input:disabled {
@@ -2450,7 +2449,7 @@ a .links{
 
 /* Mail Manager starts*/
 .mm_blur {
-    color: lightgrey;
+    color: #D3D3D3;
 }
 .mm_bold {
     padding: .3em;
