--- a/themes/alphagrey/style.css
+++ b/themes/alphagrey/style.css
@@ -1361,7 +1361,7 @@ a.calMnu:Hover{
     background-repeat:repeat-x;
 }
 
-#addEventDropDown{
+#addEventDropDown, #addButtonDropDown{
     position:absolute;
     display:none;
     width:150px;
