--- a/themes/woodspice/style.css
+++ b/themes/woodspice/style.css
@@ -1417,7 +1417,7 @@ a.calMnu:Hover{
     background-repeat:repeat-x;
 }
 
-#addEventDropDown{
+#addEventDropDown, #addButtonDropDown{
     position:absolute;
     display:none;
     width:150px;
