--- a/themes/woodspice/style.css
+++ b/themes/woodspice/style.css
@@ -2710,23 +2710,23 @@ a.drop_down_usersettings_name{
 .cb-alert-warning {
 	background-color: #fcf8e3;
 	border-color: #faebcc;
-	color: #8a6d3b
+	color: #8a6d3b;
 }
 
 .cb-alert-danger {
 	background-color: #f2dede;
 	border-color: #ebccd1;
-	color: #a94442
+	color: #a94442;
 }
 
 .cb-alert-info {
 	background-color: #d9edf7;
 	border-color: #bce8f1;
-	color: #31708f
+	color: #31708f;
 }
 
 .cb-alert-success {
 	background-color: #dff0d8;
 	border-color: #d6e9c6;
-	color: #3c763d
+	color: #3c763d;
 }
