--- a/themes/alphagrey/style.css
+++ b/themes/alphagrey/style.css
@@ -2294,6 +2294,7 @@ a.drop_down:Hover{
     padding: 2px;
     margin: 0 0 2px 0;
     border: 1px solid yellow;
+    line-height: 1.5em;
 }
 
 /* feedback or help message end here*/
