--- a/themes/bluelagoon/style.css
+++ b/themes/bluelagoon/style.css
@@ -2280,6 +2280,7 @@ a.drop_down:Hover{
 	padding: 2px;
 	margin: 0 0 2px 0;
 	border: 1px solid yellow;
+        line-height: 1.5em;
 }
 
 /* feedback or help message end here*/
