chore(Calendar) change list view icon

--- a/themes/alphagrey/style.css
+++ b/themes/alphagrey/style.css
@@ -2718,3 +2718,8 @@ a.allMnu:Hover{
 	border-color: #d6e9c6;
 	color: #3c763d;
 }
+#LB_TaskIcon img {
+	background-color: #4bc076;
+	width: 28px;
+	border-radius: 4px;
+}
