--- a/themes/softed/style.css
+++ b/themes/softed/style.css
@@ -2888,3 +2888,8 @@ a.allMnu:Hover{
 	color: #3c763d;
 }
 
+#LB_TaskIcon img {
+	background-color: #4bc076;
+	width: 28px;
+	border-radius: 4px;
+}
