fix(Lists) style the totals numbers and add sigma symbol. related to a94b0e19e289d4bf122d889a166647dabe9f25ba

--- a/themes/woodspice/style.css
+++ b/themes/woodspice/style.css
@@ -2821,3 +2821,13 @@ a.drop_down_usersettings_name{
 	padding-top: 8px;
 	padding-bottom: 4px;
 }
+
+.listview_row_total, .listview_row_sigma {
+	font-weight: bold;
+}
+
+.listview_row_sigma {
+	text-align: center;
+	width: 100%;
+	display: block;
+}
