--- a/themes/softed/style.css
+++ b/themes/softed/style.css
@@ -2971,3 +2971,13 @@ a.allMnu:Hover{
 	padding-top: 8px;
 	padding-bottom: 4px;
 }
+
+.listview_row_total, .listview_row_sigma {
+	font-weight: bold;
+}
+
+.listview_row_sigma {
+	text-align: center;
+	width: 100%;
+	display: block;
+}
