--- a/infscroll.css
+++ b/infscroll.css
@@ -86,15 +86,12 @@ main {
   box-shadow: 0 0 1em rgba(0, 0, 0, 0.25);
   display: block;
   bottom: 0;
-  left: 0;
+  width: 100%;
   list-style-type: none;
   margin: 0;
   padding: .5em;
-  position: fixed;
-  right: 0;
+  position: absolute;
   text-align: center;
-  -webkit-transform: translateY(0);
-          transform: translateY(0);
   -webkit-transition: -webkit-transform 0.2s;
   transition: -webkit-transform 0.2s;
   transition: transform 0.2s;
@@ -120,4 +117,10 @@ main {
 }
 .article-list__pagination__item a:active {
   color: #d5d5d5;
+}
+.scrollrange {
+	display: block;
+	overflow: scroll;
+	height: 230px;
+	width: 500px;
 }
