--- a/themes/bluelagoon/style.css
+++ b/themes/bluelagoon/style.css
@@ -1443,13 +1443,26 @@ level2Sel{
     border-left: 1px solid #DDDDDD;
     border-bottom: 1px solid #DDDDDD;
     border-top: 1px solid #DDDDDD;
+	border-spacing: 0;
+	border-collapse: collapse;
+	width: 98%;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+	font-size: 0.8rem;
+	font-weight: normal;
+	line-height: 1.5;
+}
+.rptContainer {
+	margin: auto;
+	width: 100%;
+	padding: 10px;
 }
 
 .rptTitle, .rptHead, .rptData, .rptGrpHead{
     font-family: Verdana, Arial, Helvetica, Sans-serif;
-    font-size: 11px;
+	font-size: 0.8rem;
     text-align:left;
     font-weight: normal;
+	line-height: 1.5;
     height: 20px;
     padding: 4px;
     border-right: 1px solid #DDDDDD;
@@ -1457,9 +1470,47 @@ level2Sel{
     background: #DDDDDD;
 }
 
+footer {
+	display: block;
+	width: 98%;
+}
+
+.page-item {
+	display: inline;
+}
+
+.page-item:first-child .page-link {
+	margin-left: 0;
+	border-bottom-left-radius: 0.25rem;
+	border-top-left-radius: 0.25rem;
+}
+
+.page-link {
+	position: relative;
+	float: left;
+	padding: 0.5rem 0.75rem;
+	margin-left: -1px;
+	color: #0275d8;
+	text-decoration: none;
+	background-color: #fff;
+	border: 1px solid #ddd;
+}
+
+datatable stats {
+	float: right;
+	line-height: 2rem;
+	color: #999;
+}
+
+.disabled {
+  cursor: not-allowed;
+  opacity: .65;
+  pointer-events: none;
+}
+
 .rptGrp1Total, .rptGrp2Total, .rptTotal {
     font-family: Verdana, Arial, Helvetica, Sans-serif;
-    font-size: 11px;
+	font-size: 0.8rem;
     text-align:center;
     font-weight: normal;
     background: #FFF;
