--- a/themes/woodspice/style.css
+++ b/themes/woodspice/style.css
@@ -1652,7 +1652,7 @@ datatable stats {
 /* Css for quick Create */
 #qcformpop {
 	position:absolute;
-	width:600px;
+	width:95%;
 	top:15px;
 	left:0px;
 	right: 0;
