--- a/themes/softed/style.css
+++ b/themes/softed/style.css
@@ -1684,7 +1684,7 @@ datatable stats {
 /* Css for quick Create */
 #qcformpop {
 	position:absolute;
-	width:600px;
+	width:95%;
 	top:15px;
 	left:0px;
 	right: 0;
@@ -1692,7 +1692,7 @@ datatable stats {
 	overflow: scroll;
 	resize: both;
 	display: none;
-	z-index:100000;
+	z-index:10000001;
 	background-color:#ddd;
 	background-image:url(images/layerPopupBg.gif) ;
 	border:2px solid #000000;
