--- a/themes/alphagrey/style.css
+++ b/themes/alphagrey/style.css
@@ -2163,8 +2163,7 @@ a.drop_down:Hover{
 	left: 0px;
 	overflow: hidden;
 	z-index: 10000;
-	Filter: Alpha(opacity = 70);
-	-moz-opacity: 0.7;
+	opacity: 0.7;
 	text-align: center;
 	vertical-align: middle;
 	position: absolute;
@@ -2178,8 +2177,7 @@ a.drop_down:Hover{
     left: 0px;
     overflow: hidden;
     z-index: 50000;
-    Filter: Alpha(opacity = 70);
-    -moz-opacity: 0.7;
+    opacity: 0.7;
     text-align: center;
     vertical-align: middle;
     position: absolute;
