--- a/themes/softed/style.css
+++ b/themes/softed/style.css
@@ -2271,8 +2271,7 @@ a.drop_downnew_parent{
 	left: 0px;
 	overflow: hidden;
 	z-index: 10000;
-	Filter: Alpha(opacity = 70);
-	-moz-opacity: 0.7;
+	opacity: 0.7;
 	text-align: center;
 	vertical-align: middle;
 	position: absolute;
@@ -2286,8 +2285,7 @@ a.drop_downnew_parent{
 	left: 0px;
 	overflow: hidden;
 	z-index: 50000;
-	Filter: Alpha(opacity = 70);
-	-moz-opacity: 0.7;
+	opacity: 0.7;
 	text-align: center;
 	vertical-align: middle;
 	position: absolute;
