--- a/include/LD/assets/styles/mainmenu.css
+++ b/include/LD/assets/styles/mainmenu.css
@@ -16,7 +16,7 @@
     top: 0;
     background-color:white;
     border: 1px solid #d8dde6;
-    border-radius: 0.25rem;
+    border-radius: 0 0.25rem 0.25rem 0;
     border-left: none;
 }
 .moreMenu2{
@@ -25,7 +25,7 @@
     position: absolute;
     background-color:white;
     border: 1px solid #d8dde6;
-    border-radius: 0.25rem;
+    border-radius: 0 0.25rem 0.25rem 0;
     border-left: none;
 }
 .moreMenu, .moreMenu2 {
@@ -37,3 +37,8 @@
     -o-transform: translateX(-3px);
     transform: translateX(-3px);
 }
+<li class="slds-context-bar__item">
+    <a href="index.php?action=index&amp;module=Accounts" class="slds-context-bar__label-action" title="Accounts">
+        <span class="slds-truncate">Accounts</span>
+    </a>
+</li>
